    having to allocate and scan a complete Element filtered list.

  * Improvement: optimized internal methods that previously called Element.children() to use filter/skip child-node list
    accessors instead, reducing new Element List allocations.

  * Improvement: tweaked the performance of parsing :pseudo selectors.

  * Bugfix: `form` elements and empty elements (such as `img`) did not have their attributes de-duplicated.
    <https://github.com/jhy/jsoup/pull/1950>

  * Bugfix: in Jsoup.connect(url), URL paths containing a %2B were incorrectly recoded to a '+', or a '+' was recoded
    to a ' '. Fixed by reverting to the previous behavior of not encoding supplied paths, other than normalizing to
    ASCII.
    <https://github.com/jhy/jsoup/issues/1952>

  * Bugfix: in Jsoup.connect(url), the ConstrainableInputStream would clear Thread interrupts when reading the body.
    This precluded callers from spawning a thread, running a number of requests for a length of time, then joining that
    thread after interrupting it.
    <https://github.com/jhy/jsoup/issues/1991>

  * Bugfix: when tracking HTML source positions, the closing tags for H1...H6 elements were not tracked correctly.
    <https://github.com/jhy/jsoup/issues/1987>

  * Change: removed previously deprecated methods Document#normalise, Element#forEach(org.jsoup.helper.Consumer<>),
    Node#forEach(org.jsoup.helper.Consumer<>), and the org.jsoup.helper.Consumer interface; the latter being a
    previously required compatibility shim prior to Android's de-sugaring support.

Release 1.16.1 [29-Apr-2023]
  * Improvement: in Jsoup.connect(url), natively support URLs with Unicode characters in the path or query string,
    without having to be escaped by the caller.
    <https://github.com/jhy/jsoup/issues/1914>

  * Improvement: Calling Node.remove() on a node with no parent is now a no-op, vs a validation error.
    <https://github.com/jhy/jsoup/issues/1898>
